--- a/app/views/service_mailer/called_out_tomorrow_email.html.erb
+++ b/app/views/service_mailer/called_out_tomorrow_email.html.erb
@@ -4,7 +4,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 </head>
 <body>
-<%= content_tag :h2, (@self_edited ? "#{@student.username} has called out of work tomorrow" : "#{@editor.username} has cancelled #{@student.username}'s shift tomorrow'") %>
+<%= content_tag :h2, (@self_edited ? "#{@student.umbcusername} has called out of work tomorrow" : "#{@editor.umbcusername} has cancelled #{@student.umbcusername}'s shift tomorrow'") %>
 
 <h3>New Schedule</h3>
 <%= render :partial => 'schedule_email', :locals => {:schedule => @schedule} %>
