--- a/app/views/service_mailer/test_email.html.erb
+++ b/app/views/service_mailer/test_email.html.erb
@@ -4,7 +4,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 </head>
 <body>
-<h1><%= @recipient.fullname %></h1>
+<h1><%= @recipient.displayName %></h1>
 <p>
   You may delete this test email, please do not reply.
 </p>
