--- a/app/views/service_mailer/test_email.text.erb
+++ b/app/views/service_mailer/test_email.text.erb
@@ -1,4 +1,4 @@
-<%= @recipient.fullname %>
+<%= @recipient.displayName %>
 ===============================================
 
 You may delete this test email, please do not reply.
