--- a/app/views/students/_user_index.erb
+++ b/app/views/students/_user_index.erb
@@ -5,8 +5,8 @@
   </div>
   <% @students.each do |student| %>
       <div class="index-row">
-        <span><%= student.username %></span>
-        <span><%= student.fullname %></span>
+        <span><%= student.umbcusername %></span>
+        <span><%= student.displayName %></span>
         <%= link_to 'Show', student, class: 'button' %>
         <%= link_to 'Edit', edit_student_path(student), class: 'button' %>
         <%= link_to 'New Schedule', new_student_schedule_path(student), class: 'button' %>
