Calendar modal popup and schedule display refactor.
Add a modal popup for schedules on the calendar. Refactor schedules
view to partials. Modal is driven by rewritten index action for
schedules that can reuse the same code for indexes in several
templates.

--- a/app/assets/stylesheets/_calendar.css.scss
+++ b/app/assets/stylesheets/_calendar.css.scss
@@ -1,8 +1,3 @@
-/* 
- * Design by David Bassett 2013 
- * updated 2014
- */
-
 %colorized-name {
   border-bottom: 2px solid $schedule-regular;
   white-space: nowrap;
@@ -85,6 +80,7 @@
 
 
   #display {
+    @extend %noselect;
     .cal-day {
       position: relative;
     }
