--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,8 @@
  *= require jquery-ui/button
  *= require jquery-ui/tooltip
  *= require jquery-ui/slider
+ *= require jquery.modal
+ *= require jquery-ui-timepicker-addon
  */
 
  @import "styles.css.scss";
