--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,18 +17,19 @@
     <span><%= link_to 'Calendar', calendar_path, class: 'button' %></span>
     <% if user_in_group? :admin %>
         <span><%= link_to 'Students', students_path, class: 'button' %></span>
-        <span><%= link_to 'Admins', administrators_path, class: 'button' %></span>
+        <span><%= link_to 'Admins', administrators_students_path, class: 'button' %></span>
     <% end %>
     <% if user_in_group? :students %>
         <span><%= link_to 'My Schedules', student_path(session[:user_id]), class: 'button' %></span>
         <span><%= link_to 'New Schedule', new_student_schedule_path(session[:user_id]), class: 'button' %></span>
     <% end %>
-    <span><%= link_to 'Logout', logout_path, class: 'button' %></span>
+    <span><%= link_to 'Logout', shibbolite.logout_path, class: 'button' %></span>
   </div>
 </div>
 <!-- end header -->
 
 <div id='page'>
+    <p id='notice'><%= notice %></p>
     <%= yield %>
 </div>
 
@@ -37,7 +38,7 @@
   <div class="wrap">
 
   </div>
-  <p id="legal">&copy; 2013 University of Maryland, Baltimore County.</p>
+  <p id="legal">&copy; 2015 University of Maryland, Baltimore County.</p>
 </div>
 <!-- end footer -->
 
