--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -39,54 +39,11 @@
   }
 }
 
-.schedules {
+// see schedules.css.scss for schedule accordion style
+.student-schedules {
   float: right;
   width: 52%;
   margin-top: 12px;
-
-  .schedule-accordion {
-    margin-bottom: 3em;
-    word-wrap: break-word;
-
-    // Schedule type colors
-    .regular { color: $schedule-regular; }
-    .temporary { color: $schedule-temporary; }
-    .absent { color: $schedule-absent; }
-
-    // all accordian rows
-    .accordion-field {
-      background: #eee;
-
-      // the schedule dates label ie MWF
-      .schedule-effective-days {
-        font-size: 20px;
-        margin-bottom: 0.5em;
-      }
-
-      .schedule-times{
-        float:left
-      }
-
-      .schedule-dates {
-        float: right;
-        margin-right: 2em;
-      }
-
-      .schedule-links {
-        clear: both;
-        float: right;
-        margin-top: 1em;
-      }
-    }
-
-    // override on hover to keep consistent with jqui
-    .ui-accordion-header:hover {
-      span.regular, span.temporary, span.absent { color: #fff; }
-      &.ui-state-active {
-        span.regular, span.temporary, span.absent { color: #000; }
-      }
-    }
-  }
 }
 
 // student and admin index table
