--- a/app/views/schedules/_detailed_schedules.html.slim
+++ b/app/views/schedules/_detailed_schedules.html.slim
@@ -3,7 +3,9 @@
     h3.day-label = date.to_s(:cal)
     .detailed-schedules
       - schedules.each do |schedule|
-        .schedule data-user=schedule.student.id data-offset=schedule.offset
+        .schedule [ data-user = schedule.student.id
+                    data-offset = schedule.offset 
+                    href = student_schedules_path(schedule.student, ids: schedule.ids) ]
           h4.name
             = schedule.student.name
           - schedule.shifts.each do |shift|
