--- a/app/views/schedules/show.html.slim
+++ b/app/views/schedules/show.html.slim
@@ -1,19 +1,3 @@
-p#notice #{notice}
-
-p = link_to 'Edit', edit_student_schedule_path(@student, @schedule), class: 'edit'
-
-p Student: #{ @schedule.student.displayName }
-
-p Shift start: #{ l @schedule.start_time }
-
-p Shift end: #{ l @schedule.end_time}
-
-p On days: #{ @schedule.days_of_week }
-
-p Start date: #{ l @schedule.start_date }
-
-p End date: #{ l @schedule.end_date}
-
-p Type: #{ @schedule.group.capitalize }
-
-p Description: #{ @schedule.description }
+h3 Schedule ##{@schedule.id} for #{@student.displayName}
+.schedule-index
+  = render @schedule
