--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -7,15 +7,12 @@
   float: left;
 
   .links {
-    float: left;
-    margin-top: -30px;
 
     a { margin-right: 5px; }
   }
 
   h2 {
-    clear: both;
-    margin-top: 2rem;
+    //clear: both;
   }
 
   p {
@@ -43,7 +40,7 @@
 .student-schedules {
   float: right;
   width: 52%;
-  margin-top: 12px;
+  margin-top: 30px;
 }
 
 // student and admin index table
