--- a/app/views/schedules/_schedule.html.slim
+++ b/app/views/schedules/_schedule.html.slim
@@ -8,8 +8,9 @@ h3.schedule-header
   h5.dates = schedule.pretty_dates
   .description = schedule.description
 
-  .links
-    = link_to 'Edit', edit_student_schedule_path(@student, schedule), class: 'edit'
-    = link_to 'Delete', student_schedule_path(@student, schedule),
-      method: :delete, data: { confirm: 'Permanently delete this schedule?' },
-      class: 'delete'
+  - if user_in_group?(:admin) || user_has_id?(@student.id)
+    .links
+      = link_to 'Edit', edit_student_schedule_path(@student, schedule), class: 'edit'
+      = link_to 'Delete', student_schedule_path(@student, schedule),
+        method: :delete, data: { confirm: 'Permanently delete this schedule?' },
+        class: 'delete'
