--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -45,7 +45,7 @@
 
 // student and admin index table
 
-$table-column-width: 160px;
+$table-column-width: 180px;
 
 #user-index-table {
   margin-top: 1.5em;
@@ -62,10 +62,8 @@ $table-column-width: 160px;
   }
 
   .index-row {
-    padding-left: 5px;
     width: 68%;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    padding: 10px 0;
     border-bottom: 3px dotted #cfdfff;
 
     &:last-of-type {
@@ -80,6 +78,7 @@ $table-column-width: 160px;
   }
 
   .button {
-    font-size: 14px;
+    font-size: 0.8rem;
+    margin-left: 1rem;
   }
 }
