Use Roadie to inline css for emails
Add styles to emails and inline them using the roadie-rails gem. Fix
a bug in the Service mailer that could prevent some emails from
being sent.

--- a/app/views/service_mailer/_schedule_email.html.slim
+++ b/app/views/service_mailer/_schedule_email.html.slim
@@ -1,9 +1,8 @@
-h3.schedule-header
-  span class=schedule.group
-    => schedule.group.humanize
-  .time = schedule.shift_time
-  .dot &middot
-  .days = schedule.days_of_week
-.schedule-details
-  h5.dates = schedule.pretty_dates
-  .description = schedule.description
+.schedule
+  h3.header
+    span class=schedule.group => schedule.group.humanize
+    span.time = schedule.shift_time
+    span.days = schedule.days_of_week
+  .details
+    .description = schedule.description
+    h5.dates = schedule.pretty_dates
