--- a/app/views/service_mailer/updated_schedule_email.html.slim
+++ b/app/views/service_mailer/updated_schedule_email.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta content="text/html; charset=UTF-8" http-equiv="Content-Type"
-
+    link type="text/css" rel="stylesheet" href="/assets/email.css"
   body
     h2 = @subject
 
